create github pages

--- a/services-SMEs.html
+++ b/services-SMEs.html
@@ -56,7 +56,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/h">how to create your own web page for free</a></section><section class="mbr-section article content1 cid-s7xDWhxk07" id="content1-g">
+<section class="engine"><a href="https://mobirise.info/o">portfolio website templates</a></section><section class="mbr-section article content1 cid-s7xDWhxk07" id="content1-g">
     
      
 
@@ -89,15 +89,13 @@
         <div class="media-container-row">
             <div class="mbr-text col-12 mbr-fonts-style display-7 col-md-8"><p><strong>SMEs Benefits 
 </strong></p><p>
-</p><p><span style="font-size: 1rem;">BEST PRACTICE GUIDELINES</span></p><p><span style="font-size: 1rem;">Responsible 100 explores over 50 issues across eight broad responsibility categories: Community, Environment, Ethical Choices, Finance and Governance, Human Rights, Marketplace Ethics, Technology, and Workforce. Our scorecard library constitutes an incredibly valuable resource.&nbsp;</span></p><p><strong>
-</strong></p><p>WHICH ISSUES MATTER MOST TO MY COMPANY? 
-</p><p>Determine the relevance and importance of a range of social, environmental and ethical issues to you and your business. We help businesses identify which issues matter most through a short, confidential and no-obligation survey, and associated analysis and personalised report.
+</p><p><span style="font-size: 1rem;"><br></span></p><p><span style="font-size: 1rem;">BEST PRACTICE GUIDELINES</span></p><p><span style="font-size: 1rem;">Responsible 100 explores over 50 issues across eight broad responsibility categories: Community, Environment, Ethical Choices, Finance and Governance, Human Rights, Marketplace Ethics, Technology, and Workforce. Our scorecard library constitutes an incredibly valuable resource.</span></p><p><span style="font-size: 1rem;"><br></span></p><p><span style="font-size: 1rem;">WHICH ISSUES MATTER MOST TO MY COMPANY?</span></p><p>Determine the relevance and importance of a range of social, environmental and ethical issues to you and your business. We help businesses identify which issues matter most through a short, confidential and no-obligation survey, and associated analysis and personalised report.</p><p><br></p><p>
 </p><p><strong>
 </strong></p><p>HOW IS MY BUSINESS DOING? 
-</p><p>Responsible 100 provide self assessment tools and guidance to reveal how your business measures up on the issues that matter most, how you compare to your peers, and where improvements can be made.
+</p><p>Responsible 100 provide self assessment tools and guidance to reveal how your business measures up on the issues that matter most, how you compare to your peers, and where improvements can be made.</p><p><br></p><p>
 </p><p>
 </p><p>HOW CAN WE IMPROVE?<strong> 
-</strong></p><p>You now know your priorities and with those in mind together we set your goals and necessary steps to make the greatest positive impact. A tailored improvement plan with clear, achievable milestones. Responsible 100 is here to guide you and provide a regular check up to ensure you and your colleagues reach your targets.
+</strong></p><p>You now know your priorities and with those in mind together we set your goals and necessary steps to make the greatest positive impact. A tailored improvement plan with clear, achievable milestones. Responsible 100 is here to guide you and provide a regular check up to ensure you and your colleagues reach your targets.</p><p><br></p><p>
 </p><p>
 </p><p>REPORTING &amp; COMMUNICATING 
 </p><p>We help R100 organisations to effectively communicate the things they are doing well, and the areas in which they are improving. Options include: PR strategy, press release writing internal comms; traditional media targeting; social media targeting.
