--- a/about-information.html
+++ b/about-information.html
@@ -56,7 +56,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/q">responsive web templates</a></section><section class="mbr-section article content1 cid-s7xtuJP8ga" id="content1-a">
+<section class="engine"><a href="https://mobirise.info/n">simple web templates</a></section><section class="mbr-section article content1 cid-s7xtuJP8ga" id="content1-a">
     
      
 
