--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/w">html5 templates</a></section><section class="cid-s7xj9Qi95q" id="header2-1">
+<section class="engine"><a href="https://mobirise.info/u">bootstrap html templates</a></section><section class="cid-s7xj9Qi95q" id="header2-1">
 
     
 
@@ -134,7 +134,7 @@
                                 <h3 class="count py-3 mbr-fonts-style display-2"><a href="services-WhatWeDo.html#bottom">57</a></h3>
                             </div>
                             <div class="card-text">
-                                <h4 class="mbr-content-title mbr-bold mbr-fonts-style display-7"><br><a href="services-WhatWeDo.html#bottom">Unique roundtable</a></h4>
+                                <h4 class="mbr-content-title mbr-bold mbr-fonts-style display-7"><br><a href="services-WhatWeDo.html">Unique roundtable</a></h4>
                                 <p class="mbr-content-text mbr-fonts-style display-7"><br>We convene world-class roundtable meetings which bring businesses and stakeholders together.</p>
                             </div>
                         </div>
