--- a/about-WhyR100.html
+++ b/about-WhyR100.html
@@ -57,7 +57,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/b">create a website for free</a></section><section class="header1 cid-s87BzS0Jhy mbr-parallax-background" id="header16-23">
+<section class="engine"><a href="https://mobirise.info/d">free site maker</a></section><section class="header1 cid-s87BzS0Jhy mbr-parallax-background" id="header16-23">
 
     
 
@@ -179,7 +179,7 @@
             <div class="card p-3 col-12 col-md-6 col-lg-3">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <img src="assets/images/background14.jpg" alt="Mobirise">
+                        <img src="assets/images/background18.jpg" alt="Mobirise">
                     </div>
                     <div class="card-box">
                         <h4 class="card-title mbr-fonts-style display-7"><strong>FOR LARGE BUSINESSES</strong></h4>
@@ -193,7 +193,7 @@
             <div class="card p-3 col-12 col-md-6 col-lg-3">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <img src="assets/images/background25.jpg" alt="Mobirise">
+                        <img src="assets/images/background29.jpg" alt="Mobirise">
                     </div>
                     <div class="card-box">
                         <h4 class="card-title mbr-fonts-style display-7"><strong>FOR SME'S</strong></h4>
@@ -208,7 +208,7 @@
             <div class="card p-3 col-12 col-md-6 col-lg-3">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <img src="assets/images/background36.jpg" alt="Mobirise">
+                        <img src="assets/images/background310.jpg" alt="Mobirise">
                     </div>
                     <div class="card-box">
                         <h4 class="card-title mbr-fonts-style display-7"><strong>SUPPORT US</strong></h4>
@@ -223,7 +223,7 @@
             <div class="card p-3 col-12 col-md-6 col-lg-3">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <img src="assets/images/background47.jpg" alt="Mobirise">
+                        <img src="assets/images/background411.jpg" alt="Mobirise">
                     </div>
                     <div class="card-box">
                         <h4 class="card-title mbr-fonts-style display-7"><strong>HOW IT WORKS</strong></h4>
