--- a/services-WhatWeDo.html
+++ b/services-WhatWeDo.html
@@ -56,7 +56,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/s">free bootstrap theme</a></section><section class="header1 cid-s88vOq4g9m mbr-parallax-background" id="header16-2i">
+<section class="engine"><a href="https://mobirise.info/d">web maker</a></section><section class="header1 cid-s88vOq4g9m mbr-parallax-background" id="header16-2i">
 
     
 
@@ -340,7 +340,7 @@ SUPPORTING YOUR BUSINESS IN EVERY STEP TOWARDS RESPONSIBILITY AS A SKILL</h1>
             <div class="card p-3 col-12 col-md-6 col-lg-4">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <img src="assets/images/background120.jpg" alt="Mobirise">
+                        <img src="assets/images/background124.jpg" alt="Mobirise">
                     </div>
                     <div class="card-box">
                         <h4 class="card-title mbr-fonts-style display-7"><strong>FOR LARGE BUSINESSES</strong></h4>
@@ -354,7 +354,7 @@ SUPPORTING YOUR BUSINESS IN EVERY STEP TOWARDS RESPONSIBILITY AS A SKILL</h1>
             <div class="card p-3 col-12 col-md-6 col-lg-4">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <img src="assets/images/background221.jpg" alt="Mobirise">
+                        <img src="assets/images/background225.jpg" alt="Mobirise">
                     </div>
                     <div class="card-box">
                         <h4 class="card-title mbr-fonts-style display-7"><strong>FOR SME'S</strong></h4>
@@ -369,7 +369,7 @@ SUPPORTING YOUR BUSINESS IN EVERY STEP TOWARDS RESPONSIBILITY AS A SKILL</h1>
             <div class="card p-3 col-12 col-md-6 col-lg-4">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <img src="assets/images/background322.jpg" alt="Mobirise">
+                        <img src="assets/images/background326.jpg" alt="Mobirise">
                     </div>
                     <div class="card-box">
                         <h4 class="card-title mbr-fonts-style display-7"><strong>COMPLETE THE FREE ASSESMENT</strong></h4>
