--- a/benchmarks-case-studies.html
+++ b/benchmarks-case-studies.html
@@ -71,7 +71,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/g">how to build your own site</a></section><section class="mbr-section article content1 cid-s7xMHG0s4K" id="content1-n">
+<section class="engine"><a href="https://mobirise.info/p">web templates free download</a></section><section class="mbr-section article content1 cid-s7xMHG0s4K" id="content1-n">
     
      
 
