create github pages

--- a/contact-us.html
+++ b/contact-us.html
@@ -15,7 +15,6 @@
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-grid.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-reboot.min.css">
-  <link rel="stylesheet" href="assets/web/assets/gdpr-plugin/gdpr-styles.css">
   <link rel="stylesheet" href="assets/tether/tether.min.css">
   <link rel="stylesheet" href="assets/dropdown/css/style.css">
   <link rel="stylesheet" href="assets/socicon/css/styles.css">
@@ -107,7 +106,7 @@
         <div class="row justify-content-center">
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="kSQnlo31m2GiZa0P9LWbRIp3LyVquv8iIG8Ky/tNufa0/NcKeFl7yRHGzlS2vEUS68GjR1uQcspyrVKntyw3TcFRCBYxfYYw/4IClRdiwYdjWKDRBMfN+ZzzuMVQc64F">
+                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="Vv0Y6/MPJqrEz4r+XMVlCCyBzhEANnElqZ8VwyoMYgFqdHmH0iMLG8NDFDN2H8FJbk+IeyajWUbc/QLxqMTiAI6eR07kcu+e7JVGQm0CrVBzbrt3QfE1dDafmDF8KBQe">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form! We'll be in touch within one working day....</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -129,11 +128,7 @@
                         </div>
                         <div class="col-md-12 input-group-btn align-center"><button type="submit" class="btn btn-form btn-secondary display-4">SEND FORM</button></div>
                     </div>
-                <span class="gdpr-block">
-<label>
-<span class="textGDPR display-7" style="color: #a7a7a7"><input type="checkbox" name="gdpr" id="gdpr-form1-4i" required="">By continuing you agree to our <a style="color: #149dcc; text-decoration: none;" href="terms.html">Terms of Service</a> and <a style="color: #149dcc; text-decoration: none;" href="policy.html">Privacy Policy</a>.</span>
-</label>
-</span></form><!---Formbuilder Form--->
+                </form><!---Formbuilder Form--->
             </div>
         </div>
     </div>
@@ -152,7 +147,7 @@
     </div>
 </section>
 
-<section class="cid-t8ZKOJusth" id="footer1-iq">
+<section class="cid-te10itrKOR" id="footer1-kf">
 
     
 
@@ -178,7 +173,7 @@
             <div class="col-12 col-md-3 mbr-fonts-style display-7">
                 <h5 class="pb-3">
                     Site Map</h5>
-                <p class="mbr-text"><a href="mission.html" class="text-primary">Our mission</a><br><a href="core-beliefs.html" class="text-primary">Core beliefs</a><br><a href="history.html" class="text-primary">Our history</a><br><a href="process.html" class="text-primary">Our process</a><br><a href="benchmarks.html" class="text-primary">Benchmarks</a><br><a href="workshops.html" class="text-primary">Workshops</a><br><a href="get-started.html" class="text-primary">Get started (orgs)</a><br><a href="join-us.html" class="text-primary">Join us (people)</a><br><a href="FAQs.html" class="text-primary">FAQs</a><a href="FAQs.html" class="text-primary"><br></a><br></p>
+                <p class="mbr-text"><a href="7-steps.html" class="text-primary">7 Step Process</a><br><a href="page11.html" class="text-primary">20 Responsibility Issues</a><br><a href="about.html" class="text-primary">About</a><br><a href="get-started.html" class="text-primary">Get started (orgs)</a><br><a href="join-us.html" class="text-primary">Join us (people)</a><br><a href="benchmarks.html" class="text-primary">Benchmarks</a><br><a href="workshops.html" class="text-primary">Workshops</a><br></p>
             </div>
         </div>
         <div class="footer-lower">
@@ -217,9 +212,8 @@
             </div>
         </div>
     </div>
-</section><section style="background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;"><a href="https://mobirise.site/x" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a><p style="flex: 0 0 auto; margin:0; padding-right:1rem;">Made with Mobirise <a href="https://mobirise.site/j" style="color:#aaa;">web</a> builder</p></section><script src="assets/popper/popper.min.js"></script>  <script src="assets/web/assets/jquery/jquery.min.js"></script>  <script src="assets/bootstrap/js/bootstrap.min.js"></script>  <script src="assets/web/assets/cookies-alert-plugin/cookies-alert-core.js"></script>  <script src="assets/web/assets/cookies-alert-plugin/cookies-alert-script.js"></script>  <script src="assets/tether/tether.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/dropdown/js/nav-dropdown.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>  <script src="assets/theme/js/script.js"></script>  <script src="assets/formoid/formoid.min.js"></script>  
+</section><section style="background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;"><a href="https://mobirise.site/u" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a><p style="flex: 0 0 auto; margin:0; padding-right:1rem;">Designed with Mobirise <a href="https://mobirise.site/j" style="color:#aaa;">web</a> software</p></section><script src="assets/popper/popper.min.js"></script>  <script src="assets/web/assets/jquery/jquery.min.js"></script>  <script src="assets/bootstrap/js/bootstrap.min.js"></script>  <script src="assets/tether/tether.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/dropdown/js/nav-dropdown.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>  <script src="assets/theme/js/script.js"></script>  <script src="assets/formoid/formoid.min.js"></script>  
   
   
-<input name="cookieData" type="hidden" data-cookie-customDialogSelector='null' data-cookie-colorText='#424a4d' data-cookie-colorBg='rgba(234, 239, 241, 0.99)' data-cookie-textButton='Agree' data-cookie-colorButton='' data-cookie-colorLink='#424a4d' data-cookie-underlineLink='true' data-cookie-text="We use cookies to give you the best experience. Read our <a href='privacy.html'>cookie policy</a>.">
-  </body>
+</body>
 </html>
