create github pages

--- a/page11.html
+++ b/page11.html
@@ -71,7 +71,7 @@
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             
-            <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-primary display-7" href="7-steps.html"><strong>7 Step Process</strong></a> <a class="btn btn-sm btn-primary display-7" href="page11.html">20 Responsibility Issues<strong></strong></a> <a class="btn btn-sm btn-primary display-7" href="about.html"><strong>About</strong></a> <a class="btn btn-sm btn-success display-7" href="get-started.html"><strong>Get Started</strong></a></div>
+            <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-primary display-7" href="7-steps.html"><strong>7 Step Process</strong></a> <a class="btn btn-sm btn-primary display-7" href="page11.html"><strong>20 Responsibility Issues</strong><strong></strong></a> <a class="btn btn-sm btn-primary display-7" href="about.html"><strong>About</strong></a> <a class="btn btn-sm btn-secondary display-7" href="get-started.html"><strong>Get Started</strong></a></div>
         </div>
     </nav>
 </section>
@@ -95,7 +95,7 @@
 
     <div class="container">
         <div class="media-container-row">
-            <div class="mbr-text col-12 mbr-fonts-style display-5 col-md-12"><div>
+            <div class="mbr-text col-12 mbr-fonts-style display-2 col-md-12"><div>
 </div><div>Responsible 100 currently explores 20 separate issues across 8 broad categories. Click the links to explore the issues:</div><div><br></div><div><strong>Community
 </strong></div><div><a href="https://trumpet.app/pods/62ac481108031a7eb8537c7e/live" class="text-primary">Local Communities</a>
 </div><div><a href="https://trumpet.app/pods/62bdcd643665a8ff0c2e9e23/live" class="text-primary">Causes &amp; Campaigns</a></div><div><br></div><div>
@@ -104,8 +104,9 @@
 </div><div><a href="https://docs.google.com/document/d/1-9r3ZCdHyw9T0fJWI7YT93CwU2i7iCL3oTk3IZxwKY8/edit?usp=sharing" class="text-primary">Reducing Waste</a></div><div><br></div><div>
 </div><div><strong>Ethical Choices
 </strong></div><div><a href="https://responsible100.trumpet.app/pods/62cd9978c47cd8b22fd3ecf8/live" class="text-primary">Reducing Inequality</a>
-</div><div><a href="https://forms.gle/oWsVrbbRep8NUifB9" class="text-primary">Lobbying &amp; Influence</a></div><div><br></div><div>
-</div><div><strong>Finance &amp; Governance</strong></div><div><span style="font-size: 1.5rem;"><a href="https://docs.google.com/document/d/1MRS9fXNU9YFY8CJ7i11RNhrfduxXHpQOlAw78pSbkLQ/edit?usp=sharing" class="text-primary">Organisational Culture</a></span></div><div><a href="https://docs.google.com/document/d/1zMbm7K2oz6irEoeDqm-HemCIljotwpNMiVZovZfFCuE/edit?usp=sharing" class="text-primary">Executive Pay</a>
+</div><div><a href="https://forms.gle/oWsVrbbRep8NUifB9" class="text-primary">Lobbying &amp; Influence</a></div><div>
+</div><div><br></div><div><strong>Finance &amp; Governance
+</strong></div><div><a href="https://docs.google.com/document/d/1MRS9fXNU9YFY8CJ7i11RNhrfduxXHpQOlAw78pSbkLQ/edit" class="text-primary">Organisational Culture</a></div><div><a href="https://docs.google.com/document/d/1zMbm7K2oz6irEoeDqm-HemCIljotwpNMiVZovZfFCuE/edit?usp=sharing" class="text-primary">Executive Pay</a>
 </div><div><a href="https://responsible100.trumpet.app/pods/62b1d67e01ddb7e374a76cdc/live" class="text-primary">Effective Governance</a></div><div><br></div><div>
 </div><div><strong>Human Rights</strong></div><div>
 </div><div><a href="https://trumpet.app/pods/edit/62aae56fda87e88e4f01fe12" class="text-primary">Modern Slavery</a>
@@ -244,7 +245,7 @@
             </div>
         </div>
     </div>
-</section><section style="background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;"><a href="https://mobirise.site/l" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a><p style="flex: 0 0 auto; margin:0; padding-right:1rem;"><a href="https://mobirise.site" style="color:#aaa;">mobirise.com</a> easy site software</p></section><script src="assets/popper/popper.min.js"></script>  <script src="assets/web/assets/jquery/jquery.min.js"></script>  <script src="assets/bootstrap/js/bootstrap.min.js"></script>  <script src="assets/tether/tether.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/dropdown/js/nav-dropdown.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>  <script src="assets/theme/js/script.js"></script>  
+</section><section style="background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;"><a href="https://mobirise.site/m" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a><p style="flex: 0 0 auto; margin:0; padding-right:1rem;">Page <a href="https://mobirise.site/f" style="color:#aaa;">was built</a> with Mobirise</p></section><script src="assets/popper/popper.min.js"></script>  <script src="assets/web/assets/jquery/jquery.min.js"></script>  <script src="assets/bootstrap/js/bootstrap.min.js"></script>  <script src="assets/tether/tether.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/dropdown/js/nav-dropdown.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>  <script src="assets/theme/js/script.js"></script>  
   
   
 </body>
