create github pages

--- a/contact-us.html
+++ b/contact-us.html
@@ -71,7 +71,7 @@
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             
-            <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-primary display-7" href="7-steps.html"><strong>7 Step Process</strong></a> <a class="btn btn-sm btn-primary display-7" href="page11.html"><strong>20 Responsibility Issues</strong><strong></strong></a> <a class="btn btn-sm btn-primary display-7" href="about.html"><strong>About</strong></a> <a class="btn btn-sm btn-secondary display-7" href="get-started.html"><strong>Get Started</strong></a></div>
+            <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-primary display-7" href="7-steps.html"><strong>7 Step Process</strong></a>  <a class="btn btn-sm btn-primary display-7" href="page11.html"><strong>20 Responsibility Issues</strong></a> <a class="btn btn-sm btn-primary display-7" href="about.html"><strong>About</strong></a> <a class="btn btn-sm btn-secondary display-7" href="get-started.html"><strong>Get Started</strong></a></div>
         </div>
     </nav>
 </section>
@@ -106,7 +106,7 @@
         <div class="row justify-content-center">
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="oPzCx+ymY3NcIQQRSIWY3TTpJAzOzEaOAY97fOXa1YI/tim6hqrDg6cP69qlPkFM4swqs1dsTj0ozahjQPIQo3FUAJhAbFQOCjb3J5kCDSnU4xmYj2UTes+kwKJJJZ66">
+                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="qz6vF6R+qdrcxKfkxNrhTS9bvBD9Y+pJ9C1gMUQdGIgboBEFNeWj96jJp30XcEY7mW7z8+uzW4Ew+C8DOz9pjJYdQSetdITQ4juDkDmkpWaPTSPqVYxHqEaKs50EhN1p">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form! We'll be in touch within one working day....</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -212,7 +212,7 @@
             </div>
         </div>
     </div>
-</section><section style="background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;"><a href="https://mobirise.site/z" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a><p style="flex: 0 0 auto; margin:0; padding-right:1rem;"><a href="https://mobirise.site/t" style="color:#aaa;">Made</a> with Mobirise free web theme</p></section><script src="assets/popper/popper.min.js"></script>  <script src="assets/web/assets/jquery/jquery.min.js"></script>  <script src="assets/bootstrap/js/bootstrap.min.js"></script>  <script src="assets/tether/tether.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/dropdown/js/nav-dropdown.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>  <script src="assets/theme/js/script.js"></script>  <script src="assets/formoid/formoid.min.js"></script>  
+</section><section style="background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;"><a href="https://mobirise.site/y" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a><p style="flex: 0 0 auto; margin:0; padding-right:1rem;">Website was <a href="https://mobirise.site/g" style="color:#aaa;">built</a> with Mobirise</p></section><script src="assets/popper/popper.min.js"></script>  <script src="assets/web/assets/jquery/jquery.min.js"></script>  <script src="assets/bootstrap/js/bootstrap.min.js"></script>  <script src="assets/tether/tether.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/dropdown/js/nav-dropdown.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>  <script src="assets/theme/js/script.js"></script>  <script src="assets/formoid/formoid.min.js"></script>  
   
   
 </body>
