--- a/page11.html
+++ b/page11.html
@@ -71,7 +71,7 @@
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             
-            <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-primary display-7" href="7-steps.html"><strong>7 Step Process</strong></a> <a class="btn btn-sm btn-primary display-7" href="page11.html"><strong>20 Responsibility Issues</strong><strong></strong></a> <a class="btn btn-sm btn-primary display-7" href="about.html"><strong>About</strong></a> <a class="btn btn-sm btn-secondary display-7" href="get-started.html"><strong>Get Started</strong></a></div>
+            <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-primary display-7" href="7-steps.html"><strong>7 Step Process</strong></a>  <a class="btn btn-sm btn-primary display-7" href="page11.html"><strong>20 Responsibility Issues</strong></a> <a class="btn btn-sm btn-primary display-7" href="about.html"><strong>About</strong></a> <a class="btn btn-sm btn-secondary display-7" href="get-started.html"><strong>Get Started</strong></a></div>
         </div>
     </nav>
 </section>
@@ -95,8 +95,8 @@
 
     <div class="container">
         <div class="media-container-row">
-            <div class="mbr-text col-12 mbr-fonts-style display-2 col-md-12"><div>
-</div><div>Responsible 100 currently explores 20 separate issues across 8 broad categories. Click the links to explore the issues:</div><div><br></div><div><strong>Community
+            <div class="mbr-text col-12 mbr-fonts-style display-5 col-md-12"><div>
+</div><div>Participating organisations share details of how they respond to a wide range of responsibility issues with Responsible 100 and other organisations participating and sharing in the same way. They share their practices, knowledge, experience, details of how well they believe they perform, and of where they strive to be in the future.</div><div><br></div><div>Responsible 100 currently explores 20 separate issues across 8 broad categories. Click the links to discover more about the issues and to find the carefully crafted questions designed to help your business tell its story:</div><div>&nbsp;</div><div><strong>Community
 </strong></div><div><a href="https://trumpet.app/pods/62ac481108031a7eb8537c7e/live" class="text-primary">Local Communities</a>
 </div><div><a href="https://trumpet.app/pods/62bdcd643665a8ff0c2e9e23/live" class="text-primary">Causes &amp; Campaigns</a></div><div><br></div><div>
 </div><div><strong>Environment
@@ -245,7 +245,7 @@
             </div>
         </div>
     </div>
-</section><section style="background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;"><a href="https://mobirise.site/m" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a><p style="flex: 0 0 auto; margin:0; padding-right:1rem;">Page <a href="https://mobirise.site/f" style="color:#aaa;">was built</a> with Mobirise</p></section><script src="assets/popper/popper.min.js"></script>  <script src="assets/web/assets/jquery/jquery.min.js"></script>  <script src="assets/bootstrap/js/bootstrap.min.js"></script>  <script src="assets/tether/tether.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/dropdown/js/nav-dropdown.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>  <script src="assets/theme/js/script.js"></script>  
+</section><section style="background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;"><a href="https://mobirise.site/k" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a><p style="flex: 0 0 auto; margin:0; padding-right:1rem;"><a href="https://mobirise.site/c" style="color:#aaa;">This</a> web page was built with Mobirise</p></section><script src="assets/popper/popper.min.js"></script>  <script src="assets/web/assets/jquery/jquery.min.js"></script>  <script src="assets/bootstrap/js/bootstrap.min.js"></script>  <script src="assets/tether/tether.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/dropdown/js/nav-dropdown.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>  <script src="assets/theme/js/script.js"></script>  
   
   
 </body>
